# rar-cracker-rs

./: Cargo.toml  LICENSE  README.md  build.rs
scripts/: build-release.ps1  build-release.sh
src/: cli.rs  cracker.rs  dictionary.rs  main.rs  password.rs  style.rs
test/: flag.rar
