[package]
name = "rar-cracker-rs"
version = "0.1.0"
edition = "2024"
description = "RAR file password brute-force cracking tool"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1"
unrar = "0.5"
walkdir = "2"
colored = "3"

[profile.release]
# 去除符号表，减小体积
strip = true
# 全程序链接时优化（最激进）
lto = "fat"
# 合并为单个代码生成单元，优化更充分
codegen-units = 1
# 优化级别：z=最小体积，s=更小但更保守
opt-level = "s"
